@@ -1,5 +1,8 @@
 Revision history for Perl extension File::HomeDir
 
+NEW
+  - Adds support for $ENV{HOME} on Darwin
+
 0.83_01 Sat  1 Nov 2008
 	- Patch from Darin McBride to fix user_home on Darwin.
 
